@@ -3,7 +3,7 @@ package gr2116.core;
 import java.time.LocalDate;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashSet;
+import java.util.EnumSet;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -15,7 +15,7 @@ public class HotelRoom {
   /**
    * A collection of amenities included in the hotel room.
    */
-  private final Collection<Amenity> amenities = new HashSet<Amenity>();
+  private final Collection<Amenity> amenities = EnumSet.noneOf(Amenity.class);
   /**
    * A calendar keeping track of when the room is reserved.
    */
@@ -42,7 +42,7 @@ public class HotelRoom {
    */
   public HotelRoom(final HotelRoomType roomType, final int number) {
     if (roomType == null) {
-      throw new NullPointerException();
+      throw new IllegalArgumentException();
     }
     if (number <= 0) {
       throw new IllegalArgumentException("Room number must be greater than zero.");
@@ -136,25 +136,24 @@ public class HotelRoom {
    * Adds the given amenity to the room's collection of amenities.
    *
    * @param amenity the given amenity.
+   * 
+   * @throws IllegalArgumentException if amenity is null
    */
   public final void addAmenity(final Amenity amenity) {
     if (amenity == null) {
-      throw new NullPointerException("Amenity cannot be null.");
+      throw new IllegalArgumentException("Amenity cannot be null.");
     }
     amenities.add(amenity);
   }
 
   /**
-   * Returns a collection of the names of the room's amenities
-   * that is sorted.
+   * Returns a collection of the names of the room's amenities.
    *
    * @return amenities
    */
   public final Collection<String> getAmenities() {
     List<String> amen = amenities.stream()
-        .map((a) -> a.name())
-        .collect(Collectors.toList());
-    Collections.sort(amen);
+        .map((a) -> a.name()).toList();
     return amen;
   }
 
@@ -208,10 +207,12 @@ public class HotelRoom {
    * Adds the given reservation to the room's reservation calendar.
    *
    * @param reservation the given reservation.
+   * 
+   * @throws IllegalArgumentException if reservation is null
    */
   public final void addReservation(final Reservation reservation) {
     if (reservation == null) {
-      throw new NullPointerException("Reservation can not be null");
+      throw new IllegalArgumentException("Reservation can not be null");
     }
 
     if (reservation.getRoomNumber() != getNumber()) {
@@ -230,7 +231,7 @@ public class HotelRoom {
    *
    * @return reservation ids
    */
-  public final Collection<Long> getReservationIds() {
+  public final Collection<String> getReservationIds() {
     return calendar.getReservationIds();
   }
 
@@ -246,7 +247,7 @@ public class HotelRoom {
   private void verifyChronology(final LocalDate startDate,
       final LocalDate endDate) {
     if (startDate == null || endDate == null) {
-      throw new NullPointerException("Startdate or endDate cannot be null.");
+      throw new IllegalArgumentException("Startdate or endDate cannot be null.");
     }
     if (!startDate.isBefore(endDate)) {
       throw new IllegalArgumentException(
